# rust_aws_lambda

./: .gitignore  Cargo.toml  Makefile  README.md
infra/: main.tf  variables.tf
